<resources>
    <string name="Allow">To remain ahead of the game,get notified when your favorite games go live.</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="Exit">Exit</string>
    <string name="Up">Update Now</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad_Blocker">adBlocker</string>
    <string name="ad_mob_ad_badge">Ad</string>
    <string name="ad_units">Ad Units</string>
    <string name="adblock">We detected ad blocker or VPN running on your device.Please disable adblocker or VPN and then use our app.</string>
    <string name="admob_banner">ca-app-pub-3940256099942544/630032</string>
    <string name="ads_sdk_version">SDK Version</string>
    <string name="advertisement_network_settings">Advertisement Network Settings</string>
    <string name="againVal">Something went wrong,Please retry.</string>
    <string name="age_restricted_user">Age Restricted User</string>
    <string name="allow_text">Allow</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="api_level">API Level</string>
    <string name="appName">Live Football Tv</string>
    <string name="appUpdate">Please, update to new version for more features.</string>
    <string name="app_id">Application ID</string>
    <string name="app_name">Live Football Tv</string>
    <string name="app_rating">App Rating..</string>
    <string name="app_review_status">App Review Status</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_info">Application Info</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_mediation_debugger_no_axon_events_text">Track Axon events and see them here by using AppLovinEventService.trackEvent(...).</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="back">back</string>
    <string name="backIcon">backIcon</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Ad ERID copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">ERID: %s</string>
    <string name="bigo_ad_feedback_copy_link">Copy link</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_link_copied">Link copied</string>
    <string name="bigo_ad_feedback_rec_rule">Recommendation Rules</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_user_privacy">Privacy</string>
    <string name="bigo_ad_feedback_why_this_ad">About this advertiser</string>
    <string name="bigo_ad_form_agree">I Agree</string>
    <string name="bigo_ad_form_cancel">Cancel</string>
    <string name="bigo_ad_form_privacy_content">By submitting this form, you agree to send your personal information to BIGO Ads and {company_name}. BIGO Ads and {company_name} will use this information in accordance with their own privacy policy. View BIGO’s Privacy Policy and {company_name}’s Privacy Policy.</string>
    <string name="bigo_ad_form_privacy_notice">Privacy Notice</string>
    <string name="bigo_ad_form_question_hint">Please Enter</string>
    <string name="bigo_ad_form_submit">Submit</string>
    <string name="bigo_ad_form_warning">The answer is required</string>
    <string name="bigo_ad_ic_application">Application</string>
    <string name="bigo_ad_ic_blank">%s</string>
    <string name="bigo_ad_ic_everyone">Everyone</string>
    <string name="bigo_ad_ic_recommended">Recommended</string>
    <string name="bigo_ad_ic_web">Web</string>
    <string name="bigo_ad_interaction_jump_hint">Jump to details page or third party app</string>
    <string name="bigo_ad_interaction_shake">Shake</string>
    <string name="bigo_ad_interaction_slide">Slide</string>
    <string name="bigo_ad_interaction_twist">Twist</string>
    <string name="bigo_ad_link_copied">Link copied</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_multi_img_more_text">MORE</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_splash_skip_after">Skip after</string>
    <string name="bigo_ad_tag">Ad</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_forward">bigo_ad_tag_forward</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="bigo_ad_tag_title">bigo_ad_tag_title</string>
    <string name="bigo_ad_title_default">Fantastic and interesting</string>
    <string name="bigo_ad_webview_loading">Loading</string>
    <string name="bigo_ad_word_icon_guid">Apps you may like</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancelIcon">cancelIcon</string>
    <string name="cas_ad_close_btn">Close</string>
    <string name="cas_ad_open_btn">Open</string>
    <string name="cas_consent_accept">YES, I AGREE</string>
    <string name="cas_consent_agree_title">By agreeing, you confirm the following:</string>
    <string name="cas_consent_decline">NO, THANK YOU</string>
    <string name="cas_consent_decline_description">You will still see ads, but they may not be relevant to your interests.</string>
    <string name="cas_consent_do_not_sell">Do Not Sell My Personal Information</string>
    <string name="cas_consent_headline">Improve Your Ad Experience</string>
    <string name="cast">Cast</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="categories_txt">Categories</string>
    <string name="clear">Clear All</string>
    <string name="event_txt">Events</string>
    <string name="more">More</string>
    <string name="no_internet_string">Internet connection lost! , please check your internet connection.</string>
    <string name="notificationText">Currently no notification available</string>
    <string name="notifications">Notifications</string>
    <string name="notified">Get Notified!</string>
    <string name="retry">Retry</string>
</resources>