<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/bigo_ad_inter_layout_end_page"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_gravity="center"
        android:id="@+id/bigo_ad_end_page_content"
        android:padding="20dp"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <TextView
                android:textSize="20sp"
                android:textColor="#333333"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/inter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bigo_ad_title_default"
                android:maxLines="1"
                android:fontFamily="sans-serif-medium"/>
            <TextView
                android:textSize="13sp"
                android:textColor="#888888"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/inter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/bigo_ad_description_default"
                android:maxLines="2"/>
            <sg.bigo.ads.common.view.RoundedFrameLayout
                android:id="@+id/inter_btn_cta_layout"
                android:clipChildren="false"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                app:bigo_ad_radius="6dp">
                <Button
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:ellipsize="end"
                    android:id="@+id/inter_btn_cta"
                    android:background="@drawable/bigo_ad_button_bg_rectangle_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bigo_ad_cta_default"
                    android:maxLines="1"
                    android:textAllCaps="false"/>
            </sg.bigo.ads.common.view.RoundedFrameLayout>
        </LinearLayout>
    </FrameLayout>
    <sg.bigo.ads.common.view.RoundedImageView
        android:layout_gravity="center"
        android:id="@+id/inter_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:translationY="-100dp"/>
</FrameLayout>
