<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/activity_splash_0"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimLayout"
        android:visibility="gone"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_140sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash_no_internet"/>
    <TextView
        android:textSize="@dimen/_16sdp"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@+id/noInternetText"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/no_internet_string"
        android:fontFamily="@font/cambriab_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimLayout"/>
    <Button
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal"
        android:id="@+id/retry"
        android:background="@color/design_default_color_primary"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/retry"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noInternetText"/>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/homeAnimLayout"
        android:visibility="visible"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginBottom="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_splash"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notificationLayout"
        android:background="@android:color/white"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/bellIcon"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/bell"
            android:contentDescription="@string/notifications"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:id="@+id/notifying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/notified"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bellIcon"/>
        <TextView
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:id="@+id/notifying2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/Allow"
            android:fontFamily="@font/cambriab_bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifying"/>
        <ImageView
            android:id="@+id/middleLay"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:src="@drawable/mainicon"
            app:layout_constraintBottom_toTopOf="@+id/yesBtn"
            app:layout_constraintTop_toBottomOf="@+id/notifying2"/>
        <LinearLayout
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/yesBtn"
            android:background="@drawable/bg_live_may"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleLay">
            <TextView
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Okay"
                android:fontFamily="@font/cambriab_bold"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>
        </LinearLayout>
        <LinearLayout
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:id="@+id/skipBtn"
            android:background="@drawable/bg_live_may"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middleLay">
            <TextView
                android:textSize="@dimen/_12sdp"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go To Settings"
                android:fontFamily="@font/cambriab_bold"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/splashLottie"
        android:visibility="gone"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:elevation="@dimen/_10sdp"
        android:indeterminateTint="@color/design_default_color_primary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
